@@ -22,6 +22,7 @@
 - Added membership for numerical sets
 - Added equality, inclusion and difference between numerical sets and numerical semigroups and ideals of numerical semigroups
 - Convert numerical semigroups to numerical sets and ideals of numerical semigroups to numerical sets (if the minimum element is zero)
+- Union, intersection and sum of numerical sets
 
 1.3.1 -> 1.4.0
 - Added NumericalSemigroupsWithFrobeniusNumberPC
